--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -1,6 +1,6 @@
 * {
     /* font-family: "Comfortaa", cursive; */
-    font-family: 'Varela Round', sans-serif;
+    font-family: "Varela Round", sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -26,19 +26,22 @@ nav a {
 
 /* Divider for welcome page */
 .b-example-divider {
-  height: 3rem;
-  background-color: rgba(0, 0, 0, .1);
-  border: solid rgba(0, 0, 0, .15);
-  border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+    height: 3rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: solid rgba(0, 0, 0, 0.15);
+    border-width: 1px 0;
+    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
+        inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
 }
 
 @media (min-width: 992px) {
-  .rounded-lg-3 { border-radius: .3rem; }
+    .rounded-lg-3 {
+        border-radius: 0.3rem;
+    }
 }
 
 .searchFront {
-  color: #d63384 ;
+    color: #d63384;
 }
 
 /* MARKETING CONTENT
@@ -46,21 +49,21 @@ nav a {
 
 /* Center align the text within the three columns below the carousel */
 .marketing .col-lg-4 {
-  margin-bottom: 1.5rem;
-  text-align: center;
+    margin-bottom: 1.5rem;
+    text-align: center;
 }
 .marketing h2 {
-  font-weight: 400;
+    font-weight: 400;
 }
 /* rtl:begin:ignore */
 .marketing .col-lg-4 p {
-  margin-right: .75rem;
-  margin-left: .75rem;
+    margin-right: 0.75rem;
+    margin-left: 0.75rem;
 }
 /* rtl:end:ignore */
 
-
-.btn-warning  {
-  color: #d63384 !important; 
-  background-color: #d63384 !important;
+.btn-warning {
+    color: #d63384 !important;
+    background-color: #d63384 !important;
 }
+
